[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[features]
# use naked interrupt handler
naked = []
# use bump allocator
bump = []
# use fixed size allocator
fixed = []

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "page_table_access"
harness = false

[dependencies]
# provides volatile memory access
volatile = "0.2.6"
# no-std spinlocks
spin = "0.5.2"
# interact with x86_64 ports
x86_64 = "0.14.2"
# send data over serial ports
uart_16550 = "0.2.0"
# interact with the 8259 programmable interrupt controller
pic8259 = "0.10.1"
# interpret scancode set and maps scancode to characters
pc-keyboard = "0.5.0"
# heap allocator backed by a linked list
linked_list_allocator = "0.9.0"

# link a bootloader of our kernel to package into a disk image
[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]

# initialize static values at runtime
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# enable isa-debug-exit of qemu
[package.metadata.bootimage]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 30          			# (in seconds)